cp project/force-app/main/default/objects/Inventory_Unit__c/Inventory_Unit__c.object-meta.xml
<CustomObject>
    <description>Real estate inventory unit records with concurrency booking protection</description>
    <label>Inventory Unit</label>
    <nameField>
        <displayFormat>UNIT-{00000}</displayFormat>
        <label>Inventory Unit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Units</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>