cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Blocked_By_Partner__c.field-meta.xml
<CustomField>
    <fullName>Blocked_By_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blocked By Partner</label>
    <referenceTo>Partner__c</referenceTo>
    <relationshipName>Blocked_Inventory_Units</relationshipName>
    <type>Lookup</type>
</CustomField>