cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Area__c</fullName>
    <label>Carpet Area (Sq. Ft.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>