cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Facing__c.field-meta.xml
<CustomField>
    <fullName>Facing__c</fullName>
    <label>Facing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>North</fullName>
                </value>
                <value>
                    <fullName>South</fullName>
                </value>
                <value>
                    <fullName>East</fullName>
                </value>
                <value>
                    <fullName>West</fullName>
                </value>
                <value>
                    <fullName>North-East</fullName>
                </value>
                <value>
                    <fullName>North-West</fullName>
                </value>
                <value>
                    <fullName>South-East</fullName>
                </value>
                <value>
                    <fullName>South-West</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>