cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Floor_Plan_URL__c.field-meta.xml
<CustomField>
    <fullName>Floor_Plan_URL__c</fullName>
    <label>Floor Plan URL</label>
    <type>Url</type>
</CustomField>