cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Odoo_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Unit_ID__c</fullName>
    <externalId>true</externalId>
    <label>Odoo Unit ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>