cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Inventory_Units</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>