cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Super_Built_Up_Area__c.field-meta.xml
<CustomField>
    <fullName>Super_Built_Up_Area__c</fullName>
    <label>Super Built Up Area (Sq. Ft.)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>