cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Tower__c.field-meta.xml
<CustomField>
    <fullName>Tower__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tower</label>
    <referenceTo>Tower__c</referenceTo>
    <relationshipName>Inventory_Units</relationshipName>
    <type>Lookup</type>
</CustomField>