cp project/force-app/main/default/objects/Inventory_Unit__c/fields/Unit_Type__c.field-meta.xml
<CustomField>
    <fullName>Unit_Type__c</fullName>
    <label>Unit Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
                <value>
                    <fullName>1BHK</fullName>
                </value>
                <value>
                    <fullName>2BHK</fullName>
                    <default>true</default>
                    <label>2BHK</label>
                </value>
                <value>
                    <fullName>2.5BHK</fullName>
                </value>
                <value>
                    <fullName>3BHK</fullName>
                </value>
                <value>
                    <fullName>3.5BHK</fullName>
                </value>
                <value>
                    <fullName>4BHK</fullName>
                </value>
                <value>
                    <fullName>Penthouse</fullName>
                </value>
                <value>
                    <fullName>Villa</fullName>
                </value>
                <value>
                    <fullName>Studio</fullName>
                </value>
                <value>
                    <fullName>Commercial Shop</fullName>
                </value>
                <value>
                    <fullName>Commercial Office</fullName>
                </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>