cp project/force-app/main/default/objects/Inventory_Unit__c/validationRules/Area_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Area_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Area__c &lt;= 0</errorConditionFormula>
    <errorMessage>Area must be greater than zero.</errorMessage>
</ValidationRule>