cp project/force-app/main/default/objects/Inventory_Unit__c/validationRules/Base_Price_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Base_Price_Positive</fullName>
    <active>true</active>
    <errorConditionFormula>Base_Price__c &lt;= 0</errorConditionFormula>
    <errorMessage>Base Price must be greater than zero.</errorMessage>
</ValidationRule>